major controllers changes. Ingredient controller - recipeCommand removed