@@ -1,6 +1,5 @@
 package com.spring.radek.recipeproject.controllers;
 
-import com.spring.radek.recipeproject.commands.CategoryCommand;
 import com.spring.radek.recipeproject.commands.RecipeCommand;
 import com.spring.radek.recipeproject.exceptions.NotFoundException;
 import com.spring.radek.recipeproject.services.CategoryService;
@@ -14,7 +13,6 @@ import org.springframework.web.bind.annotation.*;
 import org.springframework.web.servlet.ModelAndView;
 
 import javax.validation.Valid;
-import java.util.Set;
 
 @Slf4j
 @Controller
@@ -23,7 +21,8 @@ public class RecipeController {
     private final RecipeService recipeService;
     private final CategoryService categoryService;
 
-    private static final String RECIPE_RECIPEFORM_URL = "recipe/recipeform";
+    private static final String RECIPE_RECIPE_FORM_URL = "recipe/recipeform";
+    private static final String RECIPE_ATTRIBUTE = "recipe";
 
     public RecipeController(RecipeService recipeService, CategoryService categoryService) {
         this.recipeService = recipeService;
@@ -32,22 +31,22 @@ public class RecipeController {
 
     @GetMapping("/recipe/{id}/show")
     public String showById(@PathVariable String id, Model model) {
-        model.addAttribute("recipe", recipeService.findById(new Long(id)));
+        model.addAttribute(RECIPE_ATTRIBUTE, recipeService.findById(Long.valueOf(id)));
 
         return "recipe/show";
     }
 
     @GetMapping("/recipe/new")
     public String newRecipe(Model model) {
-        model.addAttribute("recipe", new RecipeCommand());
+        model.addAttribute(RECIPE_ATTRIBUTE, new RecipeCommand());
 
-        return RECIPE_RECIPEFORM_URL;
+        return RECIPE_RECIPE_FORM_URL;
     }
     @GetMapping("recipe/{id}/update")
     public String updateRecipe(@PathVariable String id, Model model) {
         model.addAttribute("categoriesList", categoryService.listAllCategories());
-        model.addAttribute("recipe", recipeService.findCommandById(Long.valueOf(id)));
-        return RECIPE_RECIPEFORM_URL;
+        model.addAttribute(RECIPE_ATTRIBUTE, recipeService.findCommandById(Long.valueOf(id)));
+        return RECIPE_RECIPE_FORM_URL;
     }
 
     @PostMapping("recipe")
@@ -55,7 +54,7 @@ public class RecipeController {
 
         if (bindingResult.hasErrors()){
             bindingResult.getAllErrors().forEach(objectError -> log.debug(objectError.toString()));
-            return RECIPE_RECIPEFORM_URL;
+            return RECIPE_RECIPE_FORM_URL;
         }
 
         RecipeCommand saveRecipeCommand = recipeService.saveRecipeCommand(recipeCommand);
